objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Balcony__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Balcony</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Baths__c</fullName>
        <label>Baths</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bedrooms__c</fullName>
        <label>Bedrooms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cameras_security_fenced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cameras/security/fenced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>BosniaandHerzegovina</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>CzechRepublic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>Hungary</fullName>
                </value>
                <value>
                    <fullName>Iceland</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Kazakhstan</fullName>
                </value>
                <value>
                    <fullName>Kosovo</fullName>
                </value>
                <value>
                    <fullName>Latvia</fullName>
                </value>
                <value>
                    <fullName>Liechtenstein</fullName>
                </value>
                <value>
                    <fullName>Lithuania</fullName>
                </value>
                <value>
                    <fullName>Luxembourg</fullName>
                </value>
                <value>
                    <fullName>Malta</fullName>
                </value>
                <value>
                    <fullName>Moldova</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Floor_no__c</fullName>
        <label>Floor no.</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Garage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Garage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Garden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Garden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ground_floor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ground floor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gym_in_the_building__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gym in the building</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_floor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last floor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lift__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mezzanine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mezzanine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Near_metro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Near metro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Near_park__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Near park</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Near_pubs_restaurants__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Near pubs/restaurants</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Near_tram_bus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Near tram/bus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_view__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of view</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Park_view__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Park view</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parking_garage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parking/garage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>River_view__c</fullName>
        <defaultValue>false</defaultValue>
        <label>River view</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rooms__c</fullName>
        <label>Rooms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Street_name__c</fullName>
        <label>Street name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terrace__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Terrace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WC_separated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WC separated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wheelchair_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wheelchair Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year_built__c</fullName>
        <label>Year built</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year_built_formula__c</fullName>
        <formula>TEXT(YEAR(Year_built__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year built formula</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>